syntax = "proto3";

message Operation {
	enum OpCode {
		DEPOSIT = 0;
		WITHDRAW = 1;
		READ = 2;		
	}
	OpCode operation = 1;
	int32 amount = 2;
}

message PromiseRequest {
	int32 customer_id = 1;
	int32 msg_id = 2;
	int32 seq_number = 3;
}
message PromiseReply {
	bool status = 1; // true if ACK
}


message CommitRequest {
	int32 customer_id = 1;
	int32 msg_id = 2;
	int32 seq_number = 3;
}
message CommitReply {
	bool status = 1; // true if ACK
}

message ListPendingRequest {
	int32 last_seq_num = 1;
}
message ListPendingReply {
	bool status = 1; // true if not frozen; discard value otherwise
	repeated Operation pending_list = 2;
}


service PrimaryBackupService {
	rpc Promise(PromiseRequest) returns (PromiseReply);
	rpc Commit(CommitRequest) returns (CommitReply);
	rpc ListPending(ListPendingRequest) returns (ListPendingReply);
}